# voicefilter

./: .gitignore  generator_test.py  inferenceLite.py  inferenceLocal.py  inferenceLocalFrame-mish.py  inferenceLocalFrame.py  success_generator.py  success_generator_3mix.py  success_generator_alternately.py  success_generator_half.py  success_generator_modifyName.py  success_generator_split.py  trainerLite.py  trainerLocal.py  trainerLocalchunk.py  trainerLocalchunkplcLoss.py  verify-fft.py
config/: config.yaml  configLite.yaml
datasets/: dataloader.py
model/: modelLite.py  modelORNN.py  modeleis.py  modeleis2.py  modelmish.py  modelmosformer.py  modelsilu.py  modelsnake.py  modelswish.py
ncnn/: CMakeLists.txt  Readme.md  main.cpp  sys_utils.h  sys_utils.mm  voice_filter.cpp  voice_filter.h
ncnn/conan/: conanfile.txt
ncnn/conan/recipes/ncnn/all/: conandata.yml  conanfile.py
ncnn/res/: MoltenVK_icd.json
onnxruntime/: .gitignore  CMakeLists.txt  Readme.md  main.cpp  test.py  voice_filter.cpp  voice_filter.h  voice_filter_i.h
onnxruntime/librosa/: librosa.h
utils/: evaluationLocalchunk.py  hparams.py  trainLite.py  trainLocal.py  trainLocalchunk.py  traincpuchunk.py  traincpuchunkplcLoss.py  trainmish.py  trainplc.py
